# tamil_tokenizer

./: .gitignore  .pypirc.example  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
examples/: finetune_usage.py
tamil_morpheme_tokenizer/: tamil_tokenizer_config.json  tamil_vocab.json  tokenizer_config.json
tamil_tokenizer/: __init__.py  __main__.py  hf_tokenizer.py  tokenizer.py
tamil_tokenizer/api/: __init__.py  grammar_analyzer.py  spell_checker.py
tamil_tokenizer/config/: __init__.py  config_loader.py  constant_table.py  constants.py  recursive_constants.py  tamil_multi_loop.py
tamil_tokenizer/constants/: __init__.py  letter_groups.py  tamil_letters.py
tamil_tokenizer/data/: 1.txt  All_Vundu.txt  Vasu.txt  allFileList.list  char.txt  condition_rule.list  config.properties  config_other.properties  duplicate.txt  endsResult.txt  endsWith.txt  endsWithCondition.txt  ignore.list  ignoreGrammar.list  ignoreNoun.list  ignoreNoun_70000.list  ignoreNumber.list  ignorePerson.list  ignorePlace.list  ignoreShortForm.list  ignoreVerb.list  mainConstant.MAIN.list  mainConstant.list  mainConstant_ORGIN.list  mainConstants_Noun.txt  main_parse_map.list  main_parse_map_noun.list  main_parse_map_verb.list  nounConstants - Copy.list  nounConstants.list  nounConstants.txt  nounParseOrder.list  parseOrder.txt  (+22 more)
tests/: benchmark_data.py  conftest.py  test_api.py  test_benchmark.py  test_character_tokenization.py  test_cli.py  test_deep_morpheme.py  test_morpheme_tokenization.py  test_probe_dump.py  test_sentence_tokenization.py  test_stress.py  test_word_tokenization.py
(+32 files in other folders)
